--- a/tidder-front/src/main/resources/templates/login.html
+++ b/tidder-front/src/main/resources/templates/login.html
@@ -17,12 +17,11 @@
         <form th:action="@{/login}"  method="POST">
 
             <div class="form-group">
-                <input type="email"  name="username" class="form-control" placeholder="username">
+                <input type="text"  name="username" class="form-control" placeholder="username">
             </div>
             <div class="form-group">
                 <input type="password" name="password" class="form-control" placeholder="password">
             </div>
-
 
             <button class="btn btn-success" type="submit">Login</button>
 
