--- a/tidder-front/src/main/resources/templates/fragments/layout.html
+++ b/tidder-front/src/main/resources/templates/fragments/layout.html
@@ -54,7 +54,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown-admin">
                         <a class="dropdown-item" href="#">Admin Frontpage</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Admin - Users</a>
+                        <a class="dropdown-item" href="/admin/user">Admin - Users</a>
                         <a class="dropdown-item" href="#">Admin - Nodes</a>
                         <a class="dropdown-item" href="#">Admin - Servers</a>
                     </div>
