--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -14,19 +14,22 @@
 <header class="masthead">
     <div class="container">
         <div class="intro-text">
-            <div class="intro-lead-in">Welcome to Sagen.App</div>
-            <!--<div class="intro-heading text-uppercase"></div>-->
-            <!--<a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>-->
+            <div class="intro-lead-in">Welcome to Tidder</div>
+            <div class="intro-text">Exploring the internet together</div>
         </div>
     </div>
 </header>
 
-<section th:if="false" id="construction">
+<section th:if="true" id="searchTopics">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Under construction</h2>
-                <h3 class="section-subheading text-muted">Sagen.App is currently under construction</h3>
+                <h2 class="section-heading text-uppercase">Start exploring now</h2>
+                <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
+                <form class="form-inline md-form form-sm active-purple active-purple-2 mt-2" action="/t" method="POST">
+                    <i class="fas fa-search" aria-hidden="true"></i>
+                    <input name="topic" class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
+                </form>
             </div>
         </div>
     </div>
@@ -71,7 +74,7 @@
 </section>
 
 <!-- Team -->
-<section th:if="true" class="bg-light" id="team">
+<section th:if="false" class="bg-light" id="team">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
