--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="intro-text">
             <div class="intro-lead-in">Welcome to Tidder</div>
-            <div class="intro-text">Exploring the internet together</div>
+            <div class="intro-heading">Exploring the internet together</div>
         </div>
     </div>
 </header>
@@ -28,7 +28,7 @@
                 <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
                 <form class="form-inline md-form form-sm active-purple active-purple-2 mt-2" action="/t" method="POST">
                     <i class="fas fa-search" aria-hidden="true"></i>
-                    <input name="topic" class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
+                    <input name="topic" class="form-control form-control-sm ml-3" type="text" placeholder="Search" aria-label="Search">
                 </form>
             </div>
         </div>
