--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head th:include="fragments/layout::head">
-    <title id="pageTitle">Sagen.App</title>
+    <title id="pageTitle">Tidder</title>
 </head>
 
 <body id="page-top">
