--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 <section th:if="true" id="searchTopics">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-md-8 col-md-offset-2 text-center">
                 <h2 class="section-heading text-uppercase">Start exploring now</h2>
                 <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
                 <form class="form-inline md-form form-sm active-purple active-purple-2 mt-2" action="/t" method="POST">
