--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="intro-text">
             <div class="intro-lead-in">Welcome to Tidder</div>
-            <div class="intro-heading">Exploring the internet together</div>
+            <div th:if="false" class="intro-heading">Exploring the internet together</div>
         </div>
     </div>
 </header>
