--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -23,10 +23,10 @@
 <section th:if="true" id="searchTopics">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center">
-                <h2 class="section-heading text-uppercase">Start exploring now</h2>
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading text-uppercase">Start exploring</h2>
                 <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
-                <form class="form-inline md-form form-sm active-purple active-purple-2 mt-2" action="/t" method="POST">
+                <form class="form-horizontal active-purple active-purple-2 mt-2" action="/t" method="POST">
                     <i class="fas fa-search" aria-hidden="true"></i>
                     <input name="topic" class="form-control form-control-sm ml-3" type="text" placeholder="Search" aria-label="Search">
                 </form>
