--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -27,8 +27,8 @@
                 <h2 class="section-heading text-uppercase">Start exploring</h2>
                 <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
                 <form class="form-horizontal active-purple active-purple-2 mt-2" action="/t" method="POST">
-                    <i class="fas fa-search" aria-hidden="true"></i>
-                    <input name="topic" class="form-control form-control-sm ml-3" type="text" placeholder="Search" aria-label="Search">
+                    <i th:if="false" class="fas fa-search" aria-hidden="true"></i>
+                    <input name="topic" class="form-control form-control-sm ml-3" type="text" placeholder="Topic" aria-label="Topic">
                 </form>
             </div>
         </div>
