--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -23,11 +23,11 @@
 <section th:if="true" id="searchTopics">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center d-flex justify-content-center">
+            <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Start exploring</h2>
                 <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
                 <!-- Search form -->
-                <form class="form-inline active-purple-3 active-purple-4 col-4">
+                <form class="form-inline active-purple-3 active-purple-4 col-4 d-flex justify-content-center">
                     <i class="fas fa-search" aria-hidden="true"></i>
                     <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
                 </form>
