--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -27,10 +27,12 @@
                 <h2 class="section-heading text-uppercase">Start exploring</h2>
                 <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
                 <!-- Search form -->
-                <form class="form-inline active-purple-3 active-purple-4 col-4 d-flex justify-content-center">
-                    <i class="fas fa-search" aria-hidden="true"></i>
-                    <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
-                </form>
+                <div class="container">
+                    <form action="/t" method="POST" class="col-md-4 offset-md-4 form-inline active-purple-3 active-purple-4 col-4 d-flex justify-content-center">
+                        <i class="fas fa-search" aria-hidden="true"></i>
+                        <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
