--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -29,8 +29,8 @@
                 <!-- Search form -->
                 <div class="container">
                     <form action="/t" method="POST" class="col-md-4 offset-md-4 form-inline active-purple-3 active-purple-4 col-4 d-flex justify-content-center">
-                        <i class="fas fa-search" aria-hidden="true"></i>
                         <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
+                        <button href="#!" class="btn btn-outline-white btn-md my-0 ml-sm-2" type="submit">Enter</button>
                     </form>
                 </div>
             </div>
