--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -27,10 +27,10 @@
                 <h2 class="section-heading text-uppercase">Start exploring</h2>
                 <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
                 <!-- Search form -->
-                <div class="container">
+                <div class="container form-inline">
                     <form action="/t" method="POST" class="col-md-4 offset-md-4 form-inline active-purple-3 active-purple-4 col-4 d-flex justify-content-center">
-                        <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
-                        <button href="#!" class="btn btn-outline-white btn-md my-0 ml-sm-2" type="submit">Enter</button>
+                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search">
+                        <button href="#!" class="btn btn-outline-purple btn-md my-0 ml-sm-2" type="submit">Enter</button>
                     </form>
                 </div>
             </div>
