--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -27,11 +27,13 @@
                 <h2 class="section-heading text-uppercase">Start exploring</h2>
                 <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
                 <!-- Search form -->
-                <div class="container form-inline">
-                    <form action="/t" method="POST" class="col-md-4 offset-md-4 form-inline active-purple-3 active-purple-4 col-4 d-flex justify-content-center">
-                        <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search">
-                        <button href="#!" class="btn btn-outline-purple btn-md my-0 ml-sm-2" type="submit">Enter</button>
-                    </form>
+                <div class="container">
+                    <div action="/t" method="POST" class="col-md-4 offset-md-4">
+                        <form class="form-inline md-form mr-auto mb-4">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-warning btn-rounded btn-sm my-0" type="submit">Search</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
