--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -20,29 +20,28 @@
     </div>
 </header>
 
-<section th:if="true" id="searchTopics">
+<section id="searchTopics">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Start exploring</h2>
                 <h3 class="section-subheading text-muted">Select a tidder channel to continue</h3>
-                <!-- Search form -->
-                <form action="/f" method="POST">
-                    <div class="row">
-                        <div class="col-xs-6 col-md-4">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Tidder" id="tidder"/>
-                                <div class="input-group-btn">
-                                    <button class="btn btn-primary" type="submit">
-                                        <span class="glyphicon glyphicon-search"></span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
             </div>
         </div>
+        <form action="/t" method="POST">
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Tidder" id="tidder"/>
+                        <div class="input-group-btn">
+                            <button class="btn btn-primary" type="submit">
+                                <span>Enter</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
 </section>
 
