--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Tidder" id="tidder"/>
+                        <input type="text" class="form-control" placeholder="Topic" id="topic" name="topic"/>
                         <div class="input-group-btn">
                             <button class="btn btn-primary" type="submit">
                                 <span>Enter</span>
