--- a/tidder-front/src/main/resources/templates/fragments/layout.html
+++ b/tidder-front/src/main/resources/templates/fragments/layout.html
@@ -38,9 +38,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/eureka}">Eureka Dashboard</a>
-                </li>
+                <form action="/t" method="POST" class="mr-3 my-auto">
+                    <input type="text" class="form-control" placeholder="Topic" id="topic" name="topic"/>
+                </form>
                 <li th:if="${currentUser==null}" class="nav-item">
                     <a class="nav-link" th:href="@{/login}">Log in</a>
                 </li>
