--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -23,25 +23,28 @@
 <section th:if="${!topicExists}" id="notclaimed">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 offset-md-3 text-center">
                 <h2 class="section-heading text-uppercase">This topic does not exist yet!</h2>
                 <h3 class="section-subheading text-muted">You can create this topic by filling out this form</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-8 offset-md-2">
                 <form id="claimtopicform" name="claimtopic" action="#" method="post">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
+                                <label>Topic Name</label>
                                 <input class="form-control" id="topic" type="text" th:value="${topicName}" disabled="disabled" required="required">
                             </div>
                             <div class="form-group">
+                                <label>Topic Title</label>
                                 <input class="form-control" id="topicTitle" type="text" placeholder="Topic Title" required="required">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
+                                <label>Description of the topic and its rules</label>
                                 <textarea class="form-control" id="topicMessage" placeholder="Describe your topic and the rules..." required="required"></textarea>
                             </div>
                         </div>
