--- a/tidder-front/src/main/resources/static/scss/_contact.scss
+++ b/tidder-front/src/main/resources/static/scss/_contact.scss
@@ -1,5 +1,5 @@
 // Styling for the contact section
-section#contact {
+section#form3plus1 {
   background-color: $gray-900;
   background-image: url('../img/map-image.png');
   background-repeat: no-repeat;
