--- a/tidder-front/src/main/resources/templates/index.html
+++ b/tidder-front/src/main/resources/templates/index.html
@@ -122,7 +122,7 @@
 </section>
 
 <!-- Contact -->
-<section id="contact">
+<section id="form3plus1">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
