--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -20,7 +20,7 @@
     </div>
 </header>
 
-<section th:if="${!topicExists}" id="notclaimed">
+<section th:if="${!topicExists}" id="form3plus1">
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3 text-center">
