--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -34,17 +34,17 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="form-control">Topic Name</label>
+                                <label>Topic Name</label>
                                 <input class="form-control" id="topic" type="text" th:value="${topicName}" disabled="disabled" required="required">
                             </div>
                             <div class="form-group">
-                                <label class="form-control">Topic Title</label>
+                                <label>Topic Title</label>
                                 <input class="form-control" id="topicTitle" type="text" placeholder="Topic Title" required="required">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="form-control">Description of the topic and its rules</label>
+                                <label>Description of the topic and its rules</label>
                                 <textarea class="form-control" id="topicMessage" placeholder="Describe your topic and the rules..." required="required"></textarea>
                             </div>
                         </div>
