--- a/tidder-front/src/main/resources/static/css/agency.css
+++ b/tidder-front/src/main/resources/static/css/agency.css
@@ -266,7 +266,7 @@ section#form3plus1 .form-group input.form-control {
   height: auto;
 }
 
-section#form3plus1 .form-group label.form-control {
+section#form3plus1 .form-group label {
   height: auto;
   color: #fff;
 }
