--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -14,13 +14,147 @@
 <header class="masthead">
     <div class="container">
         <div class="intro-text">
-            <div class="intro-lead-in">Topic <span th:text="${topicName}"></span></div>
-            <div class="intro-heading"></div>
+            <div class="intro-lead-in">/t/<span th:text="${topicName}"></span></div>
+            <div th:if="${topicName}==${'all'}" class="intro-heading">Collection of the best posts from all categories</div>
         </div>
     </div>
 </header>
 
-<section th:if="${!topicExists}" id="form3plus1">
+<!-- Posts -->
+<section id="postSection" class="container my-0 py-0 mt-3">
+    <div class="row">
+        <div id="postContainer" class="col-md-9">
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1  post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+            <div class="row my-1 post">
+                <div class="">
+                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+            <div class="row">
+                <div class="my-1 mx-3 px-4 py-3 col-12" class="userColumnContainer">
+                    <h4 class="text-align-center">Your profile</h4>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="my-1 mx-3 px-4 py-3 col-12" class="userColumnContainer">
+                    <h4 class="text-align-center">Top 10 topics</h4>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="my-1 mx-3 px-4 py-3 col-12" class="userColumnContainer">
+                    <h4 class="text-align-center">Discover</h4>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<section th:if="false && ${!topicExists}" id="form3plus1">
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3 text-center">
