--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -113,7 +113,7 @@
 
         <div class="col-md-3">
             <div class="row">
-                <div class="my-1 mx-3 px-4 py-3 col-12" class="userColumnContainer">
+                <div class="my-1 mx-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Your profile</h4>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="my-1 mx-3 px-4 py-3 col-12" class="userColumnContainer">
+                <div class="my-1 mx-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Top 10 topics</h4>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="my-1 mx-3 px-4 py-3 col-12" class="userColumnContainer">
+                <div class="my-1 mx-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Discover</h4>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
