--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -154,7 +154,7 @@
     </div>
 </section>
 
-<section th:if="false && ${!topicExists}" id="form3plus1">
+<section th:if="false" id="form3plus1">
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3 text-center">
