--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -13,8 +13,8 @@
 <!-- Header -->
 <header class="masthead">
     <div class="container">
-        <div class="intro-text">
-            <div class="intro-heading">/t/<span th:text="${topicName}"></span></div>
+        <div class="intro-text py-5">
+            <div class="intro-heading pt-5">/t/<span th:text="${topicName}"></span></div>
             <div th:if="${topicName}==${'all'}" class="intro-lead-in">Collection of the best posts from all categories</div>
         </div>
     </div>
