--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -23,7 +23,7 @@
 <!-- Posts -->
 <section id="postSection" class="container my-0 py-0 mt-3">
     <div class="row">
-        <div id="postContainer" class="col-md-9">
+        <div id="postContainer" class="col-lg-9 col-md-8">
 
             <div class="row my-1  post">
                 <div class="">
@@ -111,7 +111,7 @@
 
         </div>
 
-        <div class="col-md-3">
+        <div class="col-lg-3 col-md-4">
             <div class="row">
                 <div class="my-1 mx-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Your profile</h4>
