More html to topics

--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -27,85 +27,113 @@
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
             <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1 post">
+            <div class="row my-1  post">
                 <div class="">
-                    <span>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</span>
+                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
